--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "8000:80"
     volumes:
       - .:/var/www/html
+      - ./storage:/var/www/html/storage
     depends_on:
       - db
 
