--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^7.0.7"
+    },
+    "dependencies": {
+        "chart.js": "^4.5.1",
+        "chartjs-adapter-date-fns": "^3.0.0",
+        "react-chartjs-2": "^5.3.1"
     }
 }
