--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "@tanstack/react-table": "^8.21.3",
         "chart.js": "^4.5.1",
         "chartjs-adapter-date-fns": "^3.0.0",
         "react-chartjs-2": "^5.3.1"
